# twofold

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  flake.nix
.githooks/: pre-commit
.github/workflows/: ci-cd.yml
docs/: openapi.yaml  work-order-v02.md  work-order-v03.md  work-order.md
src/: auth.rs  cli.rs  cli_commands.rs  config.rs  db.rs  error.rs  frontmatter.rs  handlers.rs  helpers.rs  highlight.rs  main.rs  mcp.rs  mcp_http.rs  oauth.rs  parser.rs  rate_limit.rs  service.rs  state.rs  views.rs  webhook.rs
static/: twofold.js
tasks/twofold-error-pages/: work-order.md
templates/: 404.html  410.html  dark.html  document.html  hearth.html  minimal.html  paper.html  password.html
