[package]
name = "twofold"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "One document, two views. Markdown share service for humans and agents."
repository = "https://github.com/gabaum10/twofold"
authors = ["Geoff Baum <gabaum10@gmail.com>"]

[[bin]]
name = "twofold"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
comrak = "0.28"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
askama = "0.12"
tower-http = { version = "0.5", features = ["cors", "trace", "limit", "set-header"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
nanoid = "0.4"
reqwest = { version = "0.12", features = ["blocking", "json"] }
regex = "1"
subtle = "2"
