[package]
name = "twofold"
version = "0.3.7"
edition = "2021"
license = "MIT"
description = "One document, two views. Markdown share service for humans and agents."
repository = "https://github.com/gabaum10/twofold"
authors = ["Geoff Baum <gabaum10@gmail.com>"]

[[bin]]
name = "twofold"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
comrak = "0.28"
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
askama = "0.12"
tower-http = { version = "0.5", features = ["cors", "trace", "limit", "set-header", "normalize-path"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
nanoid = "0.4"
reqwest = { version = "0.12", features = ["blocking", "json"] }
subtle = "2"
serde_yaml = "0.9"
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
syntect = "5"
tower = { version = "0.5", features = ["util"] }
dashmap = "6"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
